--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 <section id="how" class="bg-gray-950 px-4 sm:px-6 section" data-aos="fade-up">
   <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12">How Zaya Works</h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-5 gap-6 max-w-6xl mx-auto">
-    <div class="card-base card-step"><span class="badge">1</span><h3 class="font-semibold text-lg mb-2 mt-4">Set Your Objective</h3><p class="text-sm text-gray-400">Define what you want to learn — from churn reasons to feature validation.</p></div>
-    <div class="card-base card-step"><span class="badge">2</span><h3 class="font-semibold text-lg mb-2 mt-4">Add Participants</h3><p class="text-sm text-gray-400">Upload a CSV or connect your CRM to auto-enroll users.</p></div>
-    <div class="card-base card-step"><span class="badge">3</span><h3 class="font-semibold text-lg mb-2 mt-4">Automated Interviews</h3><p class="text-sm text-gray-400">Voice or chat interviews run asynchronously using GPT logic.</p></div>
-    <div class="card-base card-step"><span class="badge">4</span><h3 class="font-semibold text-lg mb-2 mt-4">AI Analysis</h3><p class="text-sm text-gray-400">GPT groups feedback into themes, extracts quotes, flags sentiment.</p></div>
-    <div class="card-base card-step"><span class="badge">5</span><h3 class="font-semibold text-lg mb-2 mt-4">Insight Reports</h3><p class="text-sm text-gray-400">Share or export concise summaries in minutes — not days.</p></div>
+    <div class="card-base card-step"><h3 class="font-semibold text-lg mb-2 mt-4">Set Your Objective</h3><p class="text-sm text-gray-400">Define what you want to learn — from churn reasons to feature validation.</p></div>
+    <div class="card-base card-step"></span><h3 class="font-semibold text-lg mb-2 mt-4">Add Participants</h3><p class="text-sm text-gray-400">Upload a CSV or connect your CRM to auto-enroll users.</p></div>
+    <div class="card-base card-step"></span><h3 class="font-semibold text-lg mb-2 mt-4">Automated Interviews</h3><p class="text-sm text-gray-400">Voice or chat interviews run asynchronously using GPT logic.</p></div>
+    <div class="card-base card-step"></span><h3 class="font-semibold text-lg mb-2 mt-4">AI Analysis</h3><p class="text-sm text-gray-400">GPT groups feedback into themes, extracts quotes, flags sentiment.</p></div>
+    <div class="card-base card-step"></span><h3 class="font-semibold text-lg mb-2 mt-4">Insight Reports</h3><p class="text-sm text-gray-400">Share or export concise summaries in minutes — not days.</p></div>
   </div>
 </section>
 
