--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- ——— Meta & Fonts ——— -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Zaya | AI-Powered User Research</title>
+  <title>Zily | AI-Powered User Research</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&display=swap" rel="stylesheet" />
 
   <!-- ——— Custom Design System ——— -->
@@ -54,7 +54,7 @@
 <!--  HEADER -->
 <!-- ===================================================================================== -->
 <header class="fixed top-0 left-0 w-full z-50 bg-black/80 backdrop-blur-md shadow-md flex items-center justify-between px-4 sm:px-6 py-3">
-  <h1 class="text-lg sm:text-xl font-bold">Zaya</h1>
+  <h1 class="text-lg sm:text-xl font-bold">Zily</h1>
   <button id="navToggle" aria-label="Toggle navigation" class="sm:hidden p-2 rounded-md hover:bg-white/10 focus:outline-none">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-6 h-6"><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="18" x2="21" y2="18"/></svg>
   </button>
@@ -83,7 +83,7 @@
   <div class="absolute w-56 sm:w-72 h-56 sm:h-72 orb-light rounded-full translate-x-1/2 translate-y-1/3 blur-2xl"></div>
   <div class="relative z-10 max-w-xl">
     <h1 class="text-3xl sm:text-5xl md:text-6xl font-extrabold mb-4 leading-tight">Talk to Your Users.<br><span class="gradient-text">Smarter. Faster. Deeper.</span></h1>
-    <p class="text-base sm:text-lg text-gray-300 mb-6">Zaya uses AI to run human-like interviews with real users and delivers insights in minutes, not weeks.</p>
+    <p class="text-base sm:text-lg text-gray-300 mb-6">Zily uses AI to run human-like interviews with real users and delivers insights in minutes, not weeks.</p>
     <button class="bg-[var(--accent-start)] hover:bg-[var(--accent-end)] hover:shadow-[0_0_0_3px_rgba(139,92,246,.3)] px-8 sm:px-10 py-3 sm:py-4 rounded-full font-semibold text-base sm:text-lg transition">Book a Demo</button>
   </div>
 </section>
@@ -116,7 +116,7 @@
     </div>
     <div class="relative bg-gradient-to-br from-gray-900/60 to-gray-800/60 backdrop-blur-xl border border-[var(--accent-deep)]/30 shadow-xl p-6 sm:p-8 rounded-3xl">
       <video autoplay muted loop playsinline class="rounded-xl w-full"><source src="https://assets.mixkit.co/videos/preview/mixkit-woman-talking-on-a-video-call-41262-large.mp4" type="video/mp4" /></video>
-      <p class="text-sm text-gray-400 text-center mt-3 sm:mt-4">Zaya conducting a human-like interview.</p>
+      <p class="text-sm text-gray-400 text-center mt-3 sm:mt-4">Zily conducting a human-like interview.</p>
     </div>
   </div>
 </section>
@@ -126,14 +126,14 @@
 <!-- ===================================================================================== -->
 <section class="relative bg-black text-center px-4 sm:px-6 section clip-diagonal-down">
   <h2 class="text-3xl sm:text-5xl font-extrabold mb-6 leading-tight">The Future of Research is <span class="gradient-text animate-pulse">Always-On</span></h2>
-  <p class="text-base sm:text-lg text-gray-300 max-w-xl mx-auto">Zaya is your on-demand research assistant — conversational, intelligent, and infinitely scalable.</p>
+  <p class="text-base sm:text-lg text-gray-300 max-w-xl mx-auto">Zily is your on-demand research assistant — conversational, intelligent, and infinitely scalable.</p>
 </section>
 
 <!-- ===================================================================================== -->
-<!--  HOW ZAYA WORKS -->
+<!--  HOW Zily WORKS -->
 <!-- ===================================================================================== -->
 <section id="how" class="bg-gray-950 px-4 sm:px-6 section" data-aos="fade-up">
-  <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12">How Zaya Works</h2>
+  <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12">How Zily Works</h2>
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-5 gap-6 max-w-6xl mx-auto">
     <div class="card-base card-step"><h3 class="font-semibold text-lg mb-2 mt-4">Set Your Objective</h3><p class="text-sm text-gray-400">Define what you want to learn — from churn reasons to feature validation.</p></div>
     <div class="card-base card-step"></span><h3 class="font-semibold text-lg mb-2 mt-4">Add Participants</h3><p class="text-sm text-gray-400">Upload a CSV or connect your CRM to auto-enroll users.</p></div>
@@ -149,7 +149,7 @@
 <section id="demos" class="bg-black text-center px-4 sm:px-6 section">
   <h2 class="text-3xl sm:text-4xl font-bold mb-8">AI Voice Interview Demo</h2>
   <video autoplay muted loop playsinline class="mx-auto rounded-xl w-full max-w-4xl shadow-lg"><source src="https://assets.mixkit.co/videos/preview/mixkit-woman-talking-on-a-video-call-41262-large.mp4" type="video/mp4" /></video>
-  <p class="text-gray-400 mt-4">Zaya handles conversations, detects sentiment, and asks follow-ups — just like a human.</p>
+  <p class="text-gray-400 mt-4">Zily handles conversations, detects sentiment, and asks follow-ups — just like a human.</p>
 </section>
 
 <!-- ===================================================================================== -->
@@ -158,7 +158,7 @@
 <section class="bg-gray-950 text-center px-4 sm:px-6 section">
   <h2 class="text-3xl sm:text-4xl font-bold mb-8">AI Text Interview Demo</h2>
   <video autoplay muted loop playsinline class="mx-auto rounded-xl w-full max-w-4xl shadow-lg"><source src="https://assets.mixkit.co/videos/preview/mixkit-girl-typing-on-laptop-at-home-30389-large.mp4" type="video/mp4" /></video>
-  <p class="text-gray-400 mt-4">Users chat naturally, and Zaya adapts in real-time using prompt-based reasoning.</p>
+  <p class="text-gray-400 mt-4">Users chat naturally, and Zily adapts in real-time using prompt-based reasoning.</p>
 </section>
 
 <!-- ===================================================================================== -->
@@ -172,7 +172,7 @@
     <div class="card-base card-team"><h3 class="font-semibold text-lg mb-2">Growth Marketers</h3><p class="text-sm text-gray-400">Reveal drop-off moments, refine messaging, optimize funnels.</p></div>
     <div class="card-base card-team"><h3 class="font-semibold text-lg mb-2">Founders & Execs</h3><p class="text-sm text-gray-400">Listen directly to customers, validate big bets, drive clarity company-wide.</p></div>
   </div>
-  <p class="text-gray-400 mt-6 max-w-xl mx-auto">From feature validation to churn analysis — Zaya slots right into your workflow.</p>
+  <p class="text-gray-400 mt-6 max-w-xl mx-auto">From feature validation to churn analysis — Zily slots right into your workflow.</p>
 </section>
 
 <!-- ===================================================================================== -->
@@ -182,7 +182,7 @@
   <div class="max-w-6xl mx-auto text-center">
     <h2 class="text-3xl sm:text-4xl font-bold gradient-text mb-4">🧩 Real-World Use Cases</h2>
     <p class="uppercase text-xs sm:text-sm tracking-widest text-[var(--accent-start)] mb-2">Brand-backed with tangible goals</p>
-    <p class="text-base sm:text-lg text-gray-300 max-w-3xl mx-auto mb-12">From brand perception to concept testing, Zaya supports real teams tackling real objectives.</p>
+    <p class="text-base sm:text-lg text-gray-300 max-w-3xl mx-auto mb-12">From brand perception to concept testing, Zily supports real teams tackling real objectives.</p>
     <div class="grid md:grid-cols-3 gap-6">
       <div class="card-base card-usecase"><h3 class="font-semibold text-lg mb-2">💎 Jewelry Brand</h3><p class="text-sm text-gray-300">Explores shifting purchase drivers in luxury jewelry.</p></div>
       <div class="card-base card-usecase"><h3 class="font-semibold text-lg mb-2">🏥 Healthcare Provider</h3><p class="text-sm text-gray-300">Investigates detractor sentiment on a tech-enabled platform.</p></div>
@@ -212,9 +212,9 @@
 <!--  COMPARISON -->
 <!-- ===================================================================================== -->
 <section class="bg-black text-center px-4 sm:px-6 section">
-  <h2 class="text-3xl sm:text-4xl font-bold mb-10">Zaya vs Traditional Research</h2>
+  <h2 class="text-3xl sm:text-4xl font-bold mb-10">Zily vs Traditional Research</h2>
   <div class="grid md:grid-cols-2 gap-6 max-w-6xl mx-auto">
-    <div class="card-base card-usecase bg-gray-900/60"><h3 class="text-2xl font-semibold gradient-text mb-4">Zaya</h3><ul class="text-gray-300 space-y-2 text-sm"><li>⚡ Setup in 5 minutes</li><li>💰 ₹40–₹60 per interview</li><li>🌍 Infinite scale</li><li>📊 Themes, quotes, actions</li></ul></div>
+    <div class="card-base card-usecase bg-gray-900/60"><h3 class="text-2xl font-semibold gradient-text mb-4">Zily</h3><ul class="text-gray-300 space-y-2 text-sm"><li>⚡ Setup in 5 minutes</li><li>💰 ₹40–₹60 per interview</li><li>🌍 Infinite scale</li><li>📊 Themes, quotes, actions</li></ul></div>
     <div class="card-base card-usecase bg-gray-800/60"><h3 class="text-2xl font-semibold text-gray-300 mb-4">Traditional</h3><ul class="text-gray-400 space-y-2 text-sm"><li>⏳ 1–2 weeks setup</li><li>💸 ₹1500+ per interview</li><li>🔁 Manual ops & scheduling</li><li>📄 Static PDF reports</li></ul></div>
   </div>
 </section>
@@ -225,7 +225,7 @@
 <section class="bg-black text-center px-4 sm:px-6 section" data-aos="fade-up">
   <div class="bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900 rounded-2xl shadow-xl p-8 sm:p-10 max-w-6xl mx-auto">
     <h2 class="text-3xl sm:text-4xl font-bold mb-10 gradient-text">⚙️ Powerful, Scalable, Insightful</h2>
-    <p class="text-gray-400 max-w-2xl mx-auto text-base sm:text-lg mb-10">Zaya delivers the sophistication of an in-house research team — fully automated so you can focus on action.</p>
+    <p class="text-gray-400 max-w-2xl mx-auto text-base sm:text-lg mb-10">Zily delivers the sophistication of an in-house research team — fully automated so you can focus on action.</p>
     <div class="grid md:grid-cols-3 gap-6">
       <div class="card-base"><h3 class="text-xl font-semibold mb-3 gradient-text">GPT Insight Summaries</h3><p class="text-sm text-gray-300">Key takeaways & quote clusters generated instantly — no more slide decks.</p></div>
       <div class="card-base"><h3 class="text-xl font-semibold mb-3 gradient-text">Conversational AI</h3><p class="text-sm text-gray-300">Dynamic, unscripted interviews that adjust tone, pace, probes in real-time.</p></div>
@@ -261,7 +261,7 @@
 <!--  KEY METRICS -->
 <!-- ===================================================================================== -->
 <section class="bg-gray-950 text-center px-4 sm:px-6 section">
-  <h2 class="text-3xl sm:text-4xl font-bold mb-6">Zaya by the Numbers</h2>
+  <h2 class="text-3xl sm:text-4xl font-bold mb-6">Zily by the Numbers</h2>
   <div class="grid md:grid-cols-3 gap-6 max-w-5xl mx-auto text-[var(--accent-start)] text-2xl sm:text-3xl font-bold">
     <div class="card-base bg-gray-900"><p>+30M</p><p class="text-base text-gray-300 font-normal mt-2">Insights Processed</p></div>
     <div class="card-base bg-gray-900"><p>92%</p><p class="text-base text-gray-300 font-normal mt-2">Faster Decisions</p></div>
@@ -274,9 +274,9 @@
 <!-- ===================================================================================== -->
 <section class="bg-black text-center px-4 sm:px-6 section">
   <h2 class="text-3xl sm:text-4xl font-bold mb-4">Trusted Across Industries</h2>
-  <p class="text-gray-400 text-base sm:text-lg max-w-xl mx-auto mb-8">Fast-growing startups and global enterprises run their research on Zaya. Here's why they love it:</p>
+  <p class="text-gray-400 text-base sm:text-lg max-w-xl mx-auto mb-8">Fast-growing startups and global enterprises run their research on Zily. Here's why they love it:</p>
   <div class="max-w-6xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6" data-aos="fade-up">
-    <div class="card-base bg-gray-800"><p class="italic">“Zaya reduced our churn interviews from weeks to hours.”</p><p class="text-sm text-gray-400 mt-2">VP Growth, Fintech</p></div>
+    <div class="card-base bg-gray-800"><p class="italic">“Zily reduced our churn interviews from weeks to hours.”</p><p class="text-sm text-gray-400 mt-2">VP Growth, Fintech</p></div>
     <div class="card-base bg-gray-800"><p class="italic">“The AI feels human. Spooky — and super effective.”</p><p class="text-sm text-gray-400 mt-2">PM, SaaS</p></div>
     <div class="card-base bg-gray-800"><p class="italic">“Finally, real user feedback — without logistics overhead.”</p><p class="text-sm text-gray-400 mt-2">Founder, D2C</p></div>
   </div>
@@ -311,7 +311,7 @@
   <h2 class="text-3xl sm:text-4xl font-bold text-center mb-10">Frequently Asked Questions</h2>
   <div class="max-w-3xl mx-auto space-y-5 text-gray-300">
     <details class="card-base bg-gray-900"><summary class="cursor-pointer font-semibold">How long does a study take to set up?</summary><p class="mt-2">Roughly 5–10 minutes: pick an objective, load contacts, press Launch.</p></details>
-    <details class="card-base bg-gray-900"><summary class="cursor-pointer font-semibold">Will participants know they’re talking to an AI?</summary><p class="mt-2">Yes — Zaya always introduces itself transparently.</p></details>
+    <details class="card-base bg-gray-900"><summary class="cursor-pointer font-semibold">Will participants know they’re talking to an AI?</summary><p class="mt-2">Yes — Zily always introduces itself transparently.</p></details>
     <details class="card-base bg-gray-900"><summary class="cursor-pointer font-semibold">Can I export insights?</summary><p class="mt-2">Absolutely. Push to Slack, Notion, Sheets or download CSV & PDF.</p></details>
   </div>
 </section>
@@ -321,8 +321,8 @@
 <!-- ===================================================================================== -->
 <section class="bg-black text-center px-4 sm:px-6 section">
   <div class="card-base bg-gray-900/40 max-w-4xl mx-auto p-6 sm:p-8">
-    <h2 class="text-3xl sm:text-4xl font-bold mb-4">About Zaya</h2>
-    <p class="text-gray-400 max-w-2xl mx-auto">Founded by researchers, designers, and engineers, Zaya’s mission is to make deep user insight effortless and ubiquitous.</p>
+    <h2 class="text-3xl sm:text-4xl font-bold mb-4">About Zily</h2>
+    <p class="text-gray-400 max-w-2xl mx-auto">Founded by researchers, designers, and engineers, Zily’s mission is to make deep user insight effortless and ubiquitous.</p>
   </div>
 </section>
 
@@ -345,7 +345,7 @@
     <div><h4 class="text-gray-100 font-bold mb-2">Legal</h4><ul class="space-y-1"><li><a href="#" class="hover:underline">Privacy Policy</a></li><li><a href="#" class="hover:underline">Terms of Service</a></li></ul></div>
     <div><h4 class="text-gray-100 font-bold mb-2">Follow Us</h4><div class="flex space-x-4"><a href="#"><img src="https://img.icons8.com/ios-filled/24/ffffff/twitter.png" alt="Twitter" /></a><a href="#"><img src="https://img.icons8.com/ios-filled/24/ffffff/linkedin.png" alt="LinkedIn" /></a><a href="#"><img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram" /></a></div></div>
   </div>
-  <div class="text-center mt-12 text-xs text-gray-600">© 2025 Zaya Research · Crafted with ✨ by product thinkers</div>
+  <div class="text-center mt-12 text-xs text-gray-600">© 2025 Zily Research · Crafted with ✨ by product thinkers</div>
 </footer>
 
 <!-- ======================================================================================= -->
