--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <a href="#how"      class="hover:text-white">How&nbsp;it&nbsp;Works</a>
     <a href="#usecases" class="hover:text-white">Use&nbsp;Cases</a>
     <a href="#demos"    class="hover:text-white">Demos</a>
-    <a href="#contact"  class="hover:text-white font-semibold">Book&nbsp;Demo</a>
+    <a href=""  class="hover:text-white font-semibold" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anurag-zilyai/30min?hide_gdpr_banner=1&primary_color=783acb'});return false;"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anurag-zilyai/30min?hide_gdpr_banner=1&primary_color=783acb'});return false;">Book&nbsp;Demo</a>
   </nav>
 </header>
 <nav id="mobileMenu" class="sm:hidden fixed top-[60px] left-0 w-full bg-black/90 backdrop-blur-md py-5 space-y-4 text-center text-base text-gray-300 hidden">
@@ -72,7 +72,7 @@
   <a href="#how"      class="block hover:text-white">How it Works</a>
   <a href="#usecases" class="block hover:text-white">Use Cases</a>
   <a href="#demos"     class="block hover:text-white">Demos</a>
-  <a href="#contact"  class="block hover:text-white font-semibold">Book Demo</a>
+  <a href="" class="block hover:text-white font-semibold" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anurag-zilyai/30min?hide_gdpr_banner=1&primary_color=783acb'});return false;"onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anurag-zilyai/30min?hide_gdpr_banner=1&primary_color=783acb'});return false;">Book Demo</a>
 </nav>
 <div class="h-[60px]"></div>
 
@@ -85,7 +85,12 @@
   <div class="relative z-10 max-w-xl">
     <h1 class="text-3xl sm:text-5xl md:text-6xl font-extrabold mb-4 leading-tight">Talk to Your Users.<br><span class="gradient-text">Smarter. Faster. Deeper.</span></h1>
     <p class="text-base sm:text-lg text-gray-300 mb-6">Zily uses AI to run human-like interviews with real users and delivers insights in minutes, not weeks.</p>
-    <button class="bg-[var(--accent-start)] hover:bg-[var(--accent-end)] hover:shadow-[0_0_0_3px_rgba(139,92,246,.3)] px-8 sm:px-10 py-3 sm:py-4 rounded-full font-semibold text-base sm:text-lg transition">Book a Demo</button>
+    <button class="bg-[var(--accent-start)] hover:bg-[var(--accent-end)] hover:shadow-[0_0_0_3px_rgba(139,92,246,.3)] px-8 sm:px-10 py-3 sm:py-4 rounded-full font-semibold text-base sm:text-lg transition" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anurag-zilyai/30min?hide_gdpr_banner=1&primary_color=783acb'});return false;">Book a Demo</button>
+    <!-- Calendly link widget begin -->
+ <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<!-- <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anurag-zilyai/30min?hide_gdpr_banner=1&primary_color=783acb'});return false;">Book a demo</a> --> 
+<!-- Calendly link widget end -->
   </div>
 </section>
 
@@ -333,7 +338,7 @@
 <section id="contact" class="bg-gradient-to-r from-[var(--accent-start)] to-[var(--accent-end)] text-center px-4 sm:px-6 section">
   <h2 class="text-3xl sm:text-4xl font-bold mb-4 text-gray-100">Ready to Talk to Your Users at Scale?</h2>
   <p class="text-lg sm:text-xl text-gray-200 mb-6 max-w-xl mx-auto">Automate the grunt work and focus on building. No coordination. No analysis paralysis. Just clarity.</p>
-  <button class="bg-white text-gray-900 px-8 py-3 rounded-full font-semibold text-lg hover:bg-gray-200 transition">Start Free Trial</button>
+  <button class="bg-white text-gray-900 px-8 py-3 rounded-full font-semibold text-lg hover:bg-gray-200 transition" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anurag-zilyai/30min?hide_gdpr_banner=1&primary_color=783acb'});return false;">Start Free Trial</button>
 </section>
 
 <!-- ===================================================================================== -->
