--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 <section id="contact" class="bg-gradient-to-r from-[var(--accent-start)] to-[var(--accent-end)] text-center px-4 sm:px-6 section">
   <h2 class="text-3xl sm:text-4xl font-bold mb-4 text-gray-100">Ready to Talk to Your Users at Scale?</h2>
   <p class="text-lg sm:text-xl text-gray-200 mb-6 max-w-xl mx-auto">Automate the grunt work and focus on building. No coordination. No analysis paralysis. Just clarity.</p>
-  <button class="bg-white text-gray-900 px-8 py-3 rounded-full font-semibold text-lg hover:bg-gray-200 transition" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anurag-zilyai/30min?hide_gdpr_banner=1&primary_color=783acb'});return false;">Start Free Trial</button>
+  <button class="bg-white text-gray-900 px-8 py-3 rounded-full font-semibold text-lg hover:bg-gray-200 transition" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anurag-zilyai/30min?hide_gdpr_banner=1&primary_color=783acb'});return false;">Book a Demo</button>
 </section>
 
 <!-- ===================================================================================== -->
