--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <!-- ——— Meta & Fonts ——— -->
   <meta charset="UTF-8" />
+  <meta property="og:image" content="og.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Zily | AI-Powered User Research</title>
   <link rel="icon" type="image/x-icon" href="favicon.png">
