--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="absolute w-56 sm:w-72 h-56 sm:h-72 orb-light rounded-full translate-x-1/2 translate-y-1/3 blur-2xl"></div>
   <div class="relative z-10 max-w-xl">
     <h1 class="text-3xl sm:text-5xl md:text-6xl font-extrabold mb-4 leading-tight">Talk to Your Users.<br><span class="gradient-text">Smarter. Faster. Deeper.</span></h1>
-    <p class="text-base sm:text-lg text-gray-300 mb-6">Zily uses AI to run human-like interviews with real users and delivers insights in minutes, not weeks.</p>
+    <p class="text-base sm:text-lg text-gray-300 mb-6">Zily uses AI to run human-like interviews with real users and delivers insights in hours, not weeks.</p>
     <button class="bg-[var(--accent-start)] hover:bg-[var(--accent-end)] hover:shadow-[0_0_0_3px_rgba(139,92,246,.3)] px-8 sm:px-10 py-3 sm:py-4 rounded-full font-semibold text-base sm:text-lg transition" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/anurag-zilyai/30min?hide_gdpr_banner=1&primary_color=783acb'});return false;">Book a Demo</button>
     <!-- Calendly link widget begin -->
  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
@@ -146,7 +146,7 @@
     <div class="card-base card-step"></span><h3 class="font-semibold text-lg mb-2 mt-4">Add Participants</h3><p class="text-sm text-gray-400">Upload a CSV or connect your CRM to auto-enroll users.</p></div>
     <div class="card-base card-step"></span><h3 class="font-semibold text-lg mb-2 mt-4">Automated Interviews</h3><p class="text-sm text-gray-400">Voice or chat interviews run asynchronously using GPT logic.</p></div>
     <div class="card-base card-step"></span><h3 class="font-semibold text-lg mb-2 mt-4">AI Analysis</h3><p class="text-sm text-gray-400">GPT groups feedback into themes, extracts quotes, flags sentiment.</p></div>
-    <div class="card-base card-step"></span><h3 class="font-semibold text-lg mb-2 mt-4">Insight Reports</h3><p class="text-sm text-gray-400">Share or export concise summaries in minutes — not days.</p></div>
+    <div class="card-base card-step"></span><h3 class="font-semibold text-lg mb-2 mt-4">Insight Reports</h3><p class="text-sm text-gray-400">Share or export concise summaries in hours — not days.</p></div>
   </div>
 </section>
 
@@ -221,8 +221,8 @@
 <section class="bg-black text-center px-4 sm:px-6 section">
   <h2 class="text-3xl sm:text-4xl font-bold mb-10">Zily vs Traditional Research</h2>
   <div class="grid md:grid-cols-2 gap-6 max-w-6xl mx-auto">
-    <div class="card-base card-usecase bg-gray-900/60"><h3 class="text-2xl font-semibold gradient-text mb-4">Zily</h3><ul class="text-gray-300 space-y-2 text-sm"><li>⚡ Setup in 5 minutes</li><li>💰 ₹40–₹60 per interview</li><li>🌍 Infinite scale</li><li>📊 Themes, quotes, actions</li></ul></div>
-    <div class="card-base card-usecase bg-gray-800/60"><h3 class="text-2xl font-semibold text-gray-300 mb-4">Traditional</h3><ul class="text-gray-400 space-y-2 text-sm"><li>⏳ 1–2 weeks setup</li><li>💸 ₹1500+ per interview</li><li>🔁 Manual ops & scheduling</li><li>📄 Static PDF reports</li></ul></div>
+    <div class="card-base card-usecase bg-gray-900/60"><h3 class="text-2xl font-semibold gradient-text mb-4">Zily</h3><ul class="text-gray-300 space-y-2 text-sm"><li>⚡ Setup in 5 minutes</li><li>🌍 Infinite scale</li><li>📊 Themes, quotes, actions</li></ul></div>
+    <div class="card-base card-usecase bg-gray-800/60"><h3 class="text-2xl font-semibold text-gray-300 mb-4">Traditional</h3><ul class="text-gray-400 space-y-2 text-sm"><li>⏳ 1–2 weeks setup</li><li>🔁 Manual ops & scheduling</li><li>📄 Static PDF reports</li></ul></div>
   </div>
 </section>
 
