--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <div><h4 class="text-gray-100 font-bold mb-2">Product</h4><ul class="space-y-1"><li><a href="#" class="hover:underline">Features</a></li><li><a href="#" class="hover:underline">How it Works</a></li><li><a href="#" class="hover:underline">Integrations</a></li></ul></div>
     <div><h4 class="text-gray-100 font-bold mb-2">Company</h4><ul class="space-y-1"><li><a href="#" class="hover:underline">About</a></li><li><a href="#" class="hover:underline">Careers</a></li><li><a href="#" class="hover:underline">Contact</a></li></ul></div>
     <div><h4 class="text-gray-100 font-bold mb-2">Legal</h4><ul class="space-y-1"><li><a href="#" class="hover:underline">Privacy Policy</a></li><li><a href="#" class="hover:underline">Terms of Service</a></li></ul></div>
-    <div><h4 class="text-gray-100 font-bold mb-2">Follow Us</h4><div class="flex space-x-4"><a href="#"><img src="https://img.icons8.com/ios-filled/24/ffffff/twitter.png" alt="Twitter" /></a><a href="#"><img src="https://img.icons8.com/ios-filled/24/ffffff/linkedin.png" alt="LinkedIn" /></a><a href="#"><img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram" /></a></div></div>
+    <div><h4 class="text-gray-100 font-bold mb-2">Follow Us</h4><div class="flex space-x-4"><a href="#"><img src="https://img.icons8.com/ios-filled/24/ffffff/twitter.png" alt="Twitter" /></a><a href="#"><img src="https://img.icons8.com/ios-filled/24/ffffff/linkedin.png" alt="LinkedIn" /></a><a href="https://www.linkedin.com/company/zily/"><img src="https://img.icons8.com/ios-filled/24/ffffff/instagram-new.png" alt="Instagram" /></a></div></div>
   </div>
   <div class="text-center mt-12 text-xs text-gray-600">© 2025 Zily Research · Crafted with ✨ by product thinkers</div>
 </footer>
