--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@
         <li>📬 <span class="text-gray-200 font-semibold">Daily Insight Drops:</span> Themes, quotes, and actions delivered automatically.</li>
       </ul>
     </div>
-    <div class="relative bg-gradient-to-br from-gray-900/60 to-gray-800/60 backdrop-blur-xl border border-[var(--accent-deep)]/30 shadow-xl p-6 sm:p-8 rounded-3xl">
-      <video autoplay muted loop playsinline class="rounded-xl w-full"><source src="https://assets.mixkit.co/videos/preview/mixkit-woman-talking-on-a-video-call-41262-large.mp4" type="video/mp4" /></video>
-      <p class="text-sm text-gray-400 text-center mt-3 sm:mt-4">Zily conducting a human-like interview.</p>
+    <div class="relative flex flex-col items-center justify-center bg-gradient-to-br from-gray-900/60 to-gray-800/60 backdrop-blur-xl border border-[var(--accent-deep)]/30 shadow-xl p-6 sm:p-8 rounded-3xl">
+      <img class="rounded-xl w-full max-w-[600px] max-h-[350px] object-contain" src="graphic2.png" alt="Zily conducting a human-like interview" />
+      
     </div>
+    
   </div>
 </section>
 
