--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0057)file:///Users/apple/zaya_website/zaya_website/index2.html -->
+
 <html lang="en" class="lenis"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
 
@@ -24,18 +24,18 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Zily - AI Agency Framer Template">
     <meta property="og:description" content="Zily is a sleek, modern AI automation agency template built on Framer. This dark agency template features responsive design, high conversion potential, and easy customization, perfect for agencies looking to elevate their online presence fast.">
-    <meta property="og:image" content="https://framerusercontent.com/images/q3tff84GXo6jGQnVmQxR2VlYx8w.png">
+    <meta property="og:image" content="https://framerusercontent.com/images/cJzViFXwIJnaeyLxc7BYc8QDE.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Zily - AI Agency Framer Template">
     <meta name="twitter:description" content="Zily is a sleek, modern AI automation agency template built on Framer. This dark agency template features responsive design, high conversion potential, and easy customization, perfect for agencies looking to elevate their online presence fast.">
-    <meta name="twitter:image" content="https://framerusercontent.com/images/q3tff84GXo6jGQnVmQxR2VlYx8w.png">
+    <meta name="twitter:image" content="https://framerusercontent.com/images/cJzViFXwIJnaeyLxc7BYc8QDE.png">
 
     <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="">
 
     <meta name="robots" content="max-image-preview:large">
-    <link rel="canonical" href="https://zily.framer.website/">
-    <meta property="og:url" content="https://Zily.framer.website/">
+    <link rel="canonical" href="https://zilyai.com">
+    <meta property="og:url" content="https://zilyai.com">
     <link rel="modulepreload" fetchpriority="low" href="https://framerusercontent.com/sites/YImvrWYXZyNkTMkinDnSm/chunk-CQEDZA6Q.mjs">
     <link rel="modulepreload" fetchpriority="low" href="https://framerusercontent.com/sites/YImvrWYXZyNkTMkinDnSm/chunk-JR5VT52U.mjs">
     <link rel="modulepreload" fetchpriority="low" href="https://framerusercontent.com/sites/YImvrWYXZyNkTMkinDnSm/chunk-RIUMFBNJ.mjs">
